change grid system to use flexbox

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -2,50 +2,70 @@ $grid-column-count: 12;
 $grid-gutter-width: 80px;
 $column-padding: $grid-gutter-width / 2;
 
+$gutters: (
+  xs: 32px,
+  md: 80px
+);
+
 .container {
   max-width: 1440px;
   width: 100%;
-  padding-left: 16px;
-  padding-right: 16px;
   margin-left: auto;
   margin-right: auto;
 
-  @include media(md) {
-    padding-left: $column-padding;
-    padding-right: $column-padding;
+  @each $breakpoint in map-keys($gutters) {
+    @include media($breakpoint) {
+      $gutter: map-get($gutters, $breakpoint);
+      padding-right: ($gutter / 2);
+      padding-left:  ($gutter / 2);
+    }
   }
 }
 
 .row {
-  @include clearfix();
-  margin-left: -($column-padding);
-  margin-right: -($column-padding);
+  display: flex;
+  flex-wrap: wrap;
+
+  @each $breakpoint in map-keys($gutters) {
+    @include media($breakpoint) {
+      $gutter: map-get($gutters, $breakpoint);
+      margin-right: ($gutter / -2);
+      margin-left:  ($gutter / -2);
+    }
+  }
 }
 
-.row--lined {
+.row--dividers {
   > [class^="col-"]:not(:last-of-type) {
     border-right: 1px solid $line-gray;
   }
 }
 
+.row--dividers-light {
+  > [class^="col-"]:not(:last-of-type) {
+    border-color: $brand-secondary-dark;
+  }
+}
+
 [class^="col-"] {
-  min-height: 1px;
   position: relative;
-  padding-left: ($grid-gutter-width / 2);
-  padding-right: ($grid-gutter-width / 2);
+  width: 100%;
+  min-height: 1px;
+
+  @each $breakpoint in map-keys($gutters) {
+    @include media($breakpoint) {
+      $gutter: map-get($gutters, $breakpoint);
+      padding-right: ($gutter / 2);
+      padding-left:  ($gutter / 2);
+    }
+  }
 }
 
 @mixin grid($size, $columns: 12) {
   @for $index from 1 through $columns {
-    @if $index == 12 {
-      .col-#{$size}-#{$index} {
-        width: percentage(($index / $columns));
-      }
-    } @else {
-      .col-#{$size}-#{$index} {
-        width: percentage(($index / $columns));
-        float: left;
-      }
+    .col-#{$size}-#{$index} {
+      flex: 0 0 percentage($index / $columns);
+      max-width: percentage($index / $columns);
     }
   }
 }
