pass missions to embed so it is available in block

--- a/src/templates/partials/mission-modal.twig
+++ b/src/templates/partials/mission-modal.twig
@@ -1,5 +1,6 @@
 {% embed 'partials/modal.twig' with {
-  id: 'mission-modal'
+  id: 'mission-modal',
+  missions: missions
 } %}
   {% block header %}
     <h1>What&rsquo;s Your Mission?</h1>
