rename _site-footer.scss to _footer.scss since it contains more than just site-footer

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,7 +25,7 @@
 // layout
 @import 'grid';
 @import 'site-header';
-@import 'site-footer';
+@import 'footer';
 @import 'site-nav';
 
 .site-container {
