finish mission modal

--- a/src/scss/_mission-selector.scss
+++ b/src/scss/_mission-selector.scss
@@ -47,6 +47,7 @@
 }
 
 .mission-selector__select {
+  text-align: left;
   color: $brand-primary;
   font-family: $font-family-serif;
   font-size: 22px;
