--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -23,21 +23,34 @@ body.has-modal {
   z-index: 20;
   animation: fadeIn .2s;
 
-  &.is-toggled {
+  &.is-open {
     display: block;
   }
 }
 
+.modal__content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .modal__header {
   color: $white;
+  text-align: center;
+  flex: 0 1 auto;
+}
+
+.modal__controls {
+  text-align: right;
+  padding: 30px 30px 10px;
 }
 
 .modal__close-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+
 }
 
-.modal__content {
-
+.modal__body {
+  flex: 1;
+  overflow-y: scroll; // needs to be scroll
+  -webkit-overflow-scrolling: touch; // maintains scrolling inertia on touch device
 }
