--- a/src/templates/partials/mission-selector.twig
+++ b/src/templates/partials/mission-selector.twig
@@ -2,7 +2,7 @@
   <form action="" class="mission-selector__form">
     <div class="mission-selector__form-group">
       <label class="mission-selector__label">What&rsquo;s Your Mission?</label>
-      <select name="mission" class="mission-selector__select" data-toggle-target="#mission-modal">
+      <select name="mission" class="mission-selector__select js-mission-selector">
         {% for mission in missions %}
           <option value="{{mission.text}}">{{mission.text}}</option>
         {% endfor %}
