--- a/src/templates/partials/modal.twig
+++ b/src/templates/partials/modal.twig
@@ -1,11 +1,15 @@
-<div class="modal" id="{{id}}" role="dialog">
-  <div class="modal__header">
-    {% block header %}{% endblock %}
-    <button type="button" class="button button--secondary button--circle modal__close-button" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal__body">
-    {% block content %}{% endblock %}
+<div class="modal {{className}}" tabindex="-1" id="{{id}}" role="dialog" aria-hidden="true">
+  <div class="modal__content">
+    <div class="modal__header">
+      <div class="modal__controls">
+        <button type="button" class="button button--secondary button--circle modal__close-button" aria-label="Close" data-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% block header %}{% endblock %}
+    </div>
+    <div class="modal__body">
+      {% block content %}{% endblock %}
+    </div>
   </div>
 </div>
