--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -4,6 +4,16 @@
   text-indent: -9999px;
 }
 
+.icon--chevron-up {
+  height: 16px;
+  width: 16px;
+  transform: rotate(-45deg);
+  border: 2px solid $brand-primary;
+  border-left-width: 0;
+  border-bottom-width: 0;
+  top: 6px;
+}
+
 .icon--search {
   width: 16px;
   height: 16px;
