remove border from section link on hover

--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -28,8 +28,10 @@
 .section__nav-link {
   font-weight: $font-weight-medium;
   border-bottom: 1px solid $middlebury-blue;
+
   &:hover,
   &:focus {
     text-decoration: none;
+    border: 0;
   }
 }
