--- a/src/templates/partials/nav.twig
+++ b/src/templates/partials/nav.twig
@@ -1,81 +1,48 @@
-<nav class="site-nav site-nav--top" data-nav>
-  <ul class="site-nav__list" data-nav-list>
-    {% for item in site_nav %}
-      <li class="site-nav__item">
-        <a href="{{item.href}}" class="site-nav__link{% if loop.index >= 6 %} site-nav__link--accent{% endif %}" data-nav-link>{{item.text}}</a>
+{% macro list(menu, modifier) %}
+  <div class="site-nav__col">
+    {% if menu.title %}
+      <span class="site-nav__items-heading">{{menu.title}}</span>
+    {% endif %}
+    <ul class="site-nav__list" data-nav-list>
+      {% for item in menu.items %}
+        <li class="site-nav__item">
+          <a href="{{item.href}}" class="site-nav__link{% if modifier == 'top' and loop.index >= 6 %} site-nav__link--accent{% endif %}" data-nav-link>{{item.text}}</a>
+          {% if item.items or item.menus %}
+            {{ _self.nav(item, 'sub') }}
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+{% endmacro %}
 
-        {% if item.items %}
-          <div class="site-nav site-nav--sub site-nav--secondary" data-nav>
-            <div class="site-nav__body">
-
-              <div class="site-nav__header">
-                <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{item.text}}</a>
-              </div>
-
-              <div class="site-nav__main">
-                <ul class="site-nav__list" data-nav-list>
-                  {% for subitem in item.items %}
-                    <li class="site-nav__item">
-                      <a href="{{subitem.href}}" class="site-nav__link" data-nav-link>{{subitem.text}}</a>
-
-                      {% if subitem.items %}
-                        <div class="site-nav site-nav--sub site-nav--tertiary" data-nav>
-
-                          <div class="site-nav__body">
-                            <div class="site-nav__header">
-                              <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{subitem.text}}</a>
-                            </div>
-                            <div class="site-nav__main">
-
-                              <div class="site-nav__col">
-                                {% if subitem.items_heading %}
-                                <span class="site-nav__items-heading">{{subitem.items_heading}}</span>
-                                {% endif %}
-                                <ul class="site-nav__list">
-                                  {% for subitem in subitem.items %}
-                                  <li class="site-nav__item">
-                                    <a href="{{subitem.href}}" class="site-nav__link" data-nav-link>{{subitem.text}}</a>
-                                  </li>
-                                  {% endfor %}
-                                </ul>
-                              </div>
-
-                              {% if subitem.secondary_items %}
-                                <div class="site-nav__col">
-                                  {% if subitem.secondary_items_heading %}
-                                    <span class="site-nav__items-heading">{{subitem.secondary_items_heading}}</span>
-                                  {% endif %}
-                                  <ul class="site-nav__list">
-                                    {% for item in subitem.secondary_items %}
-                                    <li class="site-nav__item">
-                                      <a href="{{item.href}}" class="site-nav__link" data-nav-link>{{item.text}}</a>
-                                    </li>
-                                    {% endfor %}
-                                  </ul>
-                                </div>
-                              {% endif %}
-
-                            </div>
-                            <div class="site-nav__footer">
-
-                            </div>
-                          </div>
-
-                        </div>
-                      {% endif %}
-
-                    </li>
-                  {% endfor %}
-                </ul>
-              </div>
-
-              <div class="site-nav__footer">
-                {% if item.button %}
-                  <div class="site-nav__button">
-                    <a href="{{item.button.href}}" class="button button--secondary button--sm">{{item.button.text}}</a>
-                  </div>
-                {% endif %}
-              </div>
+{% macro nav(menu, modifier) %}
+  <div class="site-nav{% if modifier %} site-nav--{{modifier}}{% endif %}" data-nav>
+    <div class="site-nav__content">
+      {% if menu.text %}
+        <div class="site-nav__header">
+          <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{menu.text}}</a>
+        </div>
+      {% endif %}
+      <div class="site-nav__body">
+        {% if menu.menus %}
+          {% for menu in menu.menus %}
+            {{ _self.list(menu) }}
+          {% endfor %}
+        {% elseif menu.items %}
+          {{ _self.list(menu, modifier) }}
+        {% endif %}
+      </div>
+      {% if menu.button %}
+        <div class="site-nav__footer">
+          <div class="site-nav__button">
+            <a href="{{menu.button.href}}" class="button button--secondary button--sm">{{menu.button.text}}</a>
+          </div>
+        </div>
+      {% endif %}
+    </div>
+  </div>
+{% endmacro %}
 
             </div>
 
