--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -8,7 +8,7 @@ $gutters: (
 );
 
 .container {
-  max-width: 1440px;
+  max-width: $grid-container-width;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
