--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,8 @@ $breakpoints: (
   xl: $screen-xl,
 );
 
+$grid-container-width: 1440px;
+
 // TODO: rename and use color names e.g. brand-green, brand-blue?
 $brand-primary: #0d395f;
 $brand-primary-dark: #022543;
