--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,8 @@ $breakpoints: (
 
 $grid-container-width: 1440px;
 
+$header-width: 315px;
+
 // TODO: rename and use color names e.g. brand-green, brand-blue?
 $brand-primary: #0d395f;
 $brand-primary-dark: #022543;
