--- a/src/templates/home.twig
+++ b/src/templates/home.twig
@@ -13,7 +13,7 @@
     </section>
 
     <section class="section">
-      <div class="row row--lined">
+      <div class="row row--dividers">
         <div class="col-md-6 col-lg-3">
           <h3><a href="#">Practical Innovation</a></h3>
           <p>The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.</p>
