--- a/src/scss/_site-header.scss
+++ b/src/scss/_site-header.scss
@@ -12,9 +12,12 @@
 .site-header__primary {
   display: flex;
   align-content: center;
-  padding: 20px 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 70px;
 
   @include media(md) {
+    height: auto;
     padding: 30px;
     padding-bottom: 70px;
   }
@@ -22,7 +25,7 @@
 
 .site-header__brand {
   flex: 1;
-  align-items: center;
+  align-self: center;
 }
 
 .site-header__home-link {
