use macro for top level nav

--- a/src/templates/partials/nav.twig
+++ b/src/templates/partials/nav.twig
@@ -44,11 +44,6 @@
   </div>
 {% endmacro %}
 
-            </div>
+{% import _self as navs %}
 
-          </div>
-        {% endif %}
-      </li>
-    {% endfor %}
-  </ul>
-</nav>
+{{ navs.nav(site_nav, 'top') }}
