--- a/src/scss/_callout.scss
+++ b/src/scss/_callout.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.callout--light {
+
+}
+
 .callout__header {
   flex: 0 1 auto;
   padding-bottom: 20px;
@@ -34,6 +38,10 @@
   font-style: italic;
   font-size: 20px;
   font-weight: 300;
+
+  .callout--light & {
+    color: $white;
+  }
 }
 
 .callout__title {
@@ -41,6 +49,10 @@
   font-weight: $font-weight-book;
   line-height: 1.3;
   margin-bottom: 0;
+
+  .callout--light & {
+    color: $white;
+  }
 }
 
 .callout__subtext {
