add row--no-gutters modifier

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -35,6 +35,16 @@ $gutters: (
   }
 }
 
+.row--no-gutters {
+  margin-left: 0;
+  margin-right: 0;
+
+  > [class^="col-"] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
 .row--dividers {
   > [class^="col-"]:not(:last-of-type) {
     border-right: 1px solid $line-gray;
