--- a/src/templates/home.twig
+++ b/src/templates/home.twig
@@ -27,16 +27,16 @@
             preheader: 'Register for',
             title: 'Monterey Forum',
             subtext: 'March 28-29, 2017',
-            linkText: 'Register',
-            linkHref: '#',
+            buttonText: 'Register',
+            buttonHref: '#',
           } %}
         </div>
         <div class="col-md-6 col-lg-3">
           {% include 'partials/callout.twig' with {
             preheader: 'Application for',
             title: 'Spring 2017 Now Open',
-            linkText: 'Apply Now',
-            linkHref: '#',
+            buttonText: 'Apply Now',
+            buttonHref: '#',
           } %}
         </div>
       </div>
