fix dividers modifier class

--- a/src/templates/home.twig
+++ b/src/templates/home.twig
@@ -43,7 +43,7 @@
     </section>
 
     <section class="section">
-      <div class="row row--lined">
+      <div class="row row--dividers">
         <div class="col-md-6">
           {% embed 'partials/section.twig' with {
             title: 'Latest News',
