use light callout in footer

--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -5,6 +5,7 @@
 
         <div class="site-footer__content">
           {% embed 'partials/callout.twig' with {
+            light: true,
             preheader: 'Help us help the world',
             title: 'Support the Institute',
             social_links: social_links
