import carousel styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'section';
 @import 'input-group';
 @import 'callout';
+@import 'carousel';
 @import 'footer-menu';
 @import 'site-search';
 @import 'site-menu-button';
