start building program spotlight

--- a/src/scss/_carousel.scss
+++ b/src/scss/_carousel.scss
@@ -1,11 +1,13 @@
 .carousel {
-
-}
-
-.carousel__item {
-
+  @include media(sm) {
+    overflow: hidden;
+  }
 }
 
 .carousel__container {
+  transition: transform .2s;
+}
+
+.carousel__item {
 
 }
