--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,8 @@
 @import 'callout';
 @import 'carousel';
 @import 'footer-menu';
+@import 'program-spotlight';
+@import 'spotlight-item';
 @import 'site-search';
 @import 'site-menu-button';
 @import 'social-links';
