--- a/src/templates/home.twig
+++ b/src/templates/home.twig
@@ -83,6 +83,14 @@
       </div>
     </section>
 
+  </div>
+
+  <section class="section">
+    {% include 'partials/program-spotlight.twig' %}
+  </section>
+
+  <div class="container">
+
     {% embed 'partials/section.twig' with {
       title: 'Projects around the world',
       moreLinkHref: '#',
