create global projects section

--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -2,6 +2,26 @@
   margin-bottom: 100px;
 }
 
+.section--projects {
+  background-image: url('/img/projects-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  color: $white;
+  text-align: center;
+  padding-bottom: 65px;
+
+  .section__header {
+    padding-top: 60px;
+    display: block;
+    text-align: center;
+  }
+
+  .section__title {
+    // display: inline-block;
+  }
+}
+
 .section__header {
   display: flex;
   margin-bottom: 50px;
