add spotlight item cards with toggling

--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -1,6 +1,6 @@
-<div class="program-spotlight" data-carousel='{"show":{"580px":2,"960px":3}}'>
+<div class="program-spotlight" data-carousel='{"minWidth":580,"show":{"580":2,"960":3}}'>
   <div class="row row--no-gutters">
-    <div class="col-sm-4 col-md-3">
+    <div class="col-sm-4 col-lg-3">
       <div class="program-spotlight__header">
         {% embed 'partials/callout.twig' with {
           light: true,
@@ -11,25 +11,37 @@
           {% endblock %}
           {% block footer %}
             <div class="program-spotlight__controls" aria-label="carousel controls" role="navigation">
-              <button class="button button--secondary button--circle" aria-label="Previous" data-carousel-prev>
-                <i class="icon icon--chevron icon--chevron-left" aria-hidden="true">Previous</i>
+              <button class="button button--secondary button--circle carousel__prev-button" aria-label="Previous" data-carousel-prev>
+                <span aria-hidden="true">&lsaquo;</span>
               </button>
-              <button class="button button--secondary button--circle" aria-label="Next" data-carousel-next>
-                <i class="icon icon--chevron icon--chevron-right" aria-hidden="true">Next</i>
+              <button class="button button--secondary button--circle carousel__next-button" aria-label="Next" data-carousel-next>
+                <span aria-hidden="true">&rsaquo;</span>
               </button>
             </div>
           {% endblock %}
         {% endembed %}
       </div>
     </div>
-    <div class="col-sm-8 col-md-9">
+    <div class="col-sm-8 col-lg-9">
 
       <div class="carousel">
         <div class="carousel__container" data-carousel-container>
 
           {% for program in programs %}
             <div class="carousel__item" data-carousel-item>
-              <article class="spotlight-item{% if program.light == true %} spotlight-item--light{% endif %}">
+              <article class="spotlight-item{% if program.light == true %} spotlight-item--light{% endif %} js-spotlight-item-{{loop.index}}">
+
+                <a
+                  href="#"
+                  class="spotlight-item__close-button"
+                  role="button"
+                  aria-label="Close"
+                  data-toggle-target=".js-spotlight-item-{{loop.index}}"
+                  data-toggle-linked="spotlight-item-{{loop.index}}"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </a>
+
                 <figure class="spotlight-item__image">
                   <picture>
                     <source srcset="{{program.image_md}} 1x, {{program.image_md_2x}} 2x" media="(min-width: 580px)">
@@ -37,16 +49,37 @@
                     <img src="{{program.image_md}}" alt="{{program.image_alt}}">
                   </picture>
                 </figure>
+
                 <div class="spotlight-item__content">
-                  <div class="spotlight-item__body">
-                    <h3 class="spotlight-item__title">
-                      <a href="{{program.href}}" class="spotlight-item__link">{{program.title}}</a>
-                    </h3>
-                    <p class="spotlight-item__blurb">{{program.blurb}}</p>
+                  <div class="spotlight-item__side spotlight-item__side--front">
+
+                    <div class="spotlight-item__body">
+                      <h3 class="spotlight-item__title">
+                        <a href="{{program.href}}" class="spotlight-item__link">{{program.title}}</a>
+                      </h3>
+                      <p class="spotlight-item__blurb">{{program.blurb}}</p>
+                    </div>
+                    <footer class="spotlight-item__footer">
+                      <a href="#"
+                        class="button button--secondary button--circle"
+                        data-toggle-target=".js-spotlight-item-{{loop.index}}"
+                        data-toggle-linked="spotlight-item-{{loop.index}}"
+                        data-toggle-group="spotlight-items">
+                        &rdquo;
+                      </a>
+                    </footer>
+
                   </div>
-                  <footer class="spotlight-item__footer">
-                    <a href="#" class="button button--secondary button--circle">&rdquo;</a>
-                  </footer>
+                  <div class="spotlight-item__side spotlight-item__side--back">
+
+                    <div class="spotlight-item__body">
+                      <p>{{program.card.body}}</p>
+                    </div>
+                    <footer class="spotlight-item__footer">
+                      <a href="{{program.card.link_href}}" class="button button--secondary button--circle button--block">{{program.card.link_text}}</a>
+                    </footer>
+
+                  </div>
                 </div>
               </article>
             </div>
