--- a/src/scss/_spotlight-item.scss
+++ b/src/scss/_spotlight-item.scss
@@ -9,6 +9,21 @@ $spotlight-item-breakpoint: 'sm';
   }
 }
 
+.spotlight-item__close-button {
+  display: none;
+
+  @include media($spotlight-item-breakpoint) {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 5;
+
+    .spotlight-item.is-toggled & {
+      display: block;
+    }
+  }
+}
+
 .spotlight-item__image {
   @include media($spotlight-item-breakpoint) {
     position: absolute;
@@ -24,8 +39,6 @@ $spotlight-item-breakpoint: 'sm';
   padding: 20px;
 
   @include media($spotlight-item-breakpoint) {
-    display: flex;
-    flex-direction: column;
     position: absolute;
     top: 0;
     left: 0;
@@ -37,6 +50,30 @@ $spotlight-item-breakpoint: 'sm';
 
   @include media(md) {
     padding: 50px;
+  }
+}
+
+.spotlight-item__side {
+  @include media($spotlight-item-breakpoint) {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.spotlight-item__side--front {
+  .spotlight-item.has-toggler.is-toggled & {
+    display: none;
+  }
+}
+
+.spotlight-item__side--back {
+  .spotlight-item.has-toggler & {
+    display: none;
+  }
+
+  .spotlight-item.is-toggled & {
+    display: flex;
   }
 }
 
