change quote icons to plus icon

--- a/src/templates/partials/program-spotlight.twig
+++ b/src/templates/partials/program-spotlight.twig
@@ -65,7 +65,7 @@
                         data-toggle-target=".js-spotlight-item-{{loop.index}}"
                         data-toggle-linked="spotlight-item-{{loop.index}}"
                         data-toggle-group="spotlight-items">
-                        &rdquo;
+                        &plus;
                       </a>
                     </footer>
 
