use em tag for element that will always be italics

--- a/src/templates/partials/callout.twig
+++ b/src/templates/partials/callout.twig
@@ -1,7 +1,7 @@
 <div class="callout{% if className %} {{className}}{% endif %}{% if light %} callout--light{% endif %}">
   <div class="callout__header">
     {% if preheader %}
-      <span class="callout__preheader">{{preheader}}</span>
+      <em class="callout__preheader">{{preheader}}</em>
     {% endif %}
   <h3 class="callout__title">{{title}}</h3>
   </div>
