--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   font-family: $font-family-sans-serif;
   white-space: nowrap;
+  text-align: center;
   padding: 13px 20px;
   font-size: 16px;
   border-radius: 0;
