--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -45,6 +45,7 @@ p {
 p.intro {
   font-size: rem(20);
   line-height: rem(28);
+  color: $black;
 
   @include media(md) {
     font-size: rem(22);
